--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -213,7 +213,6 @@ allow 178.175.142.26;
 allow 178.175.148.209;
 allow 178.20.55.16;
 allow 178.20.55.182;
-allow 178.208.90.162;
 allow 178.218.144.18;
 allow 178.218.144.51;
 allow 178.218.144.64;
@@ -544,6 +543,7 @@ allow 185.56.171.94;
 allow 185.56.83.83;
 allow 185.67.82.114;
 allow 185.7.33.146;
+allow 185.81.115.120;
 allow 185.82.219.109;
 allow 185.86.148.90;
 allow 188.165.200.97;
@@ -996,7 +996,9 @@ allow 23.154.177.7;
 allow 23.154.177.8;
 allow 23.154.177.9;
 allow 23.155.24.6;
+allow 23.155.8.104;
 allow 23.236.122.62;
+allow 23.94.133.162;
 allow 23.94.211.25;
 allow 2400:8901::f03c:93ff:fe68:23b3;
 allow 2401:c080:2000:111f:5400:4ff:fea3:9c02;
@@ -1018,6 +1020,7 @@ allow 2600:3c00::f03c:91ff:fe96:1cd9;
 allow 2600:3c03:e000:fa::3;
 allow 2600:3c03::f03c:91ff:fe24:47be;
 allow 2600:3c03::f03c:94ff:fed1:8c69;
+allow 2602:2e5::104;
 allow 2602:2e6:0:6::;
 allow 2602:fc24:12:759::1;
 allow 2602:fc24:12:77c0::1;
@@ -1616,7 +1619,7 @@ allow 2a12:8641:3:24::;
 allow 2a12:a800:2:1:45:138:16:203;
 allow 31.129.22.65;
 allow 31.42.185.134;
-allow 3.218.163.184;
+allow 3.217.238.34;
 allow 35.0.127.52;
 allow 35.240.241.135;
 allow 37.1.201.144;
@@ -1781,6 +1784,7 @@ allow 72.14.179.10;
 allow 72.211.49.235;
 allow 74.82.47.194;
 allow 77.105.146.42;
+allow 77.220.196.253;
 allow 77.221.157.237;
 allow 77.221.159.184;
 allow 77.221.159.189;
@@ -1889,6 +1893,7 @@ allow 93.95.225.141;
 allow 93.95.228.125;
 allow 93.95.228.205;
 allow 93.95.230.165;
+allow 93.95.230.54;
 allow 93.95.231.14;
 allow 93.95.231.88;
 allow 93.99.104.128;
