--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -153,6 +153,7 @@ allow 154.16.116.61;
 allow 156.146.63.172;
 allow 160.119.249.240;
 allow 162.247.72.192;
+allow 162.247.72.199;
 allow 162.247.74.200;
 allow 162.247.74.201;
 allow 162.247.74.202;
@@ -1025,6 +1026,7 @@ allow 2602:fc24:19:30::1;
 allow 2602:fc24:19:95b7::1;
 allow 2602:fccf:310:1::a;
 allow 2602:fccf:310:1::b;
+allow 2602:fef9:100:1100::199;
 allow 2604:2dc0:202:300::ed3;
 allow 2604:6600:0:42::2;
 allow 2604:b480:3:6::2;
@@ -1610,7 +1612,6 @@ allow 2a12:8641:3:24::;
 allow 2a12:a800:2:1:45:138:16:203;
 allow 31.129.22.65;
 allow 31.42.185.134;
-allow 34.193.157.226;
 allow 35.0.127.52;
 allow 35.240.241.135;
 allow 37.1.201.144;
@@ -1724,7 +1725,6 @@ allow 5.196.8.113;
 allow 5.196.95.34;
 allow 5.255.100.126;
 allow 5.255.100.219;
-allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.103.190;
 allow 5.255.103.235;
@@ -1749,6 +1749,7 @@ allow 5.255.99.124;
 allow 5.255.99.147;
 allow 5.255.99.5;
 allow 5.2.67.226;
+allow 52.70.80.254;
 allow 5.2.79.190;
 allow 5.34.182.203;
 allow 5.42.66.6;
@@ -1758,6 +1759,7 @@ allow 5.42.80.234;
 allow 5.42.80.235;
 allow 54.36.101.21;
 allow 54.36.108.162;
+allow 54.36.209.253;
 allow 54.36.209.254;
 allow 5.45.102.93;
 allow 5.45.104.176;
