--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -137,6 +137,7 @@ allow 2602:fc24:19:30::1;
 allow 2602:fc24:19:95b7::1;
 allow 2602:fccf:310:1::a;
 allow 2602:fccf:310:1::b;
+allow 2602:fef9:100:1100::199;
 allow 2604:2dc0:202:300::ed3;
 allow 2604:6600:0:42::2;
 allow 2604:b480:3:6::2;
