--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -131,6 +131,7 @@ allow 138.59.18.110;
 allow 139.99.8.57;
 allow 141.239.149.94;
 allow 141.98.11.62;
+allow 142.171.211.123;
 allow 142.44.234.69;
 allow 143.110.156.176;
 allow 144.172.118.4;
@@ -654,7 +655,6 @@ allow 194.164.122.21;
 allow 194.233.174.56;
 allow 194.26.192.64;
 allow 194.26.192.77;
-allow 194.26.196.71;
 allow 195.160.220.104;
 allow 195.176.3.19;
 allow 195.176.3.20;
@@ -945,6 +945,7 @@ allow 209.141.51.30;
 allow 209.141.55.26;
 allow 209.141.59.116;
 allow 209.141.62.71;
+allow 210.223.41.251;
 allow 212.21.66.6;
 allow 212.73.134.204;
 allow 212.95.50.77;
@@ -992,6 +993,7 @@ allow 23.154.177.8;
 allow 23.154.177.9;
 allow 23.155.24.6;
 allow 23.155.8.104;
+allow 23.21.56.126;
 allow 23.236.122.62;
 allow 23.94.133.162;
 allow 23.94.211.25;
@@ -1574,6 +1576,8 @@ allow 2a0e:d602:2:2a2::2;
 allow 2a0e:d602:2:55f::2;
 allow 2a0e:e701:1198::1;
 allow 2a0e:fa00:0:d0::1;
+allow 2a0f:85c1:356:197a::1;
+allow 2a0f:85c1:356:578f::1;
 allow 2a0f:93c1:26:1f2::9ce5;
 allow 2a0f:df00:0:255::194;
 allow 2a0f:df00:0:255::195;
@@ -1725,6 +1729,7 @@ allow 5.196.8.113;
 allow 5.196.95.34;
 allow 5.255.100.126;
 allow 5.255.100.219;
+allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.103.190;
 allow 5.255.103.235;
@@ -1749,7 +1754,6 @@ allow 5.255.99.124;
 allow 5.255.99.147;
 allow 5.255.99.5;
 allow 5.2.67.226;
-allow 52.70.80.254;
 allow 5.2.79.190;
 allow 5.34.182.203;
 allow 5.42.66.6;
@@ -1773,6 +1777,8 @@ allow 62.63.244.28;
 allow 64.227.115.78;
 allow 66.146.193.33;
 allow 66.220.242.222;
+allow 66.78.40.147;
+allow 66.78.40.160;
 allow 67.219.109.141;
 allow 71.19.144.106;
 allow 72.14.179.10;
