--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -684,6 +684,8 @@ allow 2a0e:d602:2:2a2::2;
 allow 2a0e:d602:2:55f::2;
 allow 2a0e:e701:1198::1;
 allow 2a0e:fa00:0:d0::1;
+allow 2a0f:85c1:356:197a::1;
+allow 2a0f:85c1:356:578f::1;
 allow 2a0f:93c1:26:1f2::9ce5;
 allow 2a0f:df00:0:255::194;
 allow 2a0f:df00:0:255::195;
