--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -131,6 +131,7 @@ deny 138.59.18.110;
 deny 139.99.8.57;
 deny 141.239.149.94;
 deny 141.98.11.62;
+deny 142.171.211.123;
 deny 142.44.234.69;
 deny 143.110.156.176;
 deny 144.172.118.4;
@@ -654,7 +655,6 @@ deny 194.164.122.21;
 deny 194.233.174.56;
 deny 194.26.192.64;
 deny 194.26.192.77;
-deny 194.26.196.71;
 deny 195.160.220.104;
 deny 195.176.3.19;
 deny 195.176.3.20;
@@ -945,6 +945,7 @@ deny 209.141.51.30;
 deny 209.141.55.26;
 deny 209.141.59.116;
 deny 209.141.62.71;
+deny 210.223.41.251;
 deny 212.21.66.6;
 deny 212.73.134.204;
 deny 212.95.50.77;
@@ -992,6 +993,7 @@ deny 23.154.177.8;
 deny 23.154.177.9;
 deny 23.155.24.6;
 deny 23.155.8.104;
+deny 23.21.56.126;
 deny 23.236.122.62;
 deny 23.94.133.162;
 deny 23.94.211.25;
@@ -1574,6 +1576,8 @@ deny 2a0e:d602:2:2a2::2;
 deny 2a0e:d602:2:55f::2;
 deny 2a0e:e701:1198::1;
 deny 2a0e:fa00:0:d0::1;
+deny 2a0f:85c1:356:197a::1;
+deny 2a0f:85c1:356:578f::1;
 deny 2a0f:93c1:26:1f2::9ce5;
 deny 2a0f:df00:0:255::194;
 deny 2a0f:df00:0:255::195;
@@ -1725,6 +1729,7 @@ deny 5.196.8.113;
 deny 5.196.95.34;
 deny 5.255.100.126;
 deny 5.255.100.219;
+deny 5.255.100.26;
 deny 5.255.101.10;
 deny 5.255.103.190;
 deny 5.255.103.235;
@@ -1749,7 +1754,6 @@ deny 5.255.99.124;
 deny 5.255.99.147;
 deny 5.255.99.5;
 deny 5.2.67.226;
-deny 52.70.80.254;
 deny 5.2.79.190;
 deny 5.34.182.203;
 deny 5.42.66.6;
@@ -1773,6 +1777,8 @@ deny 62.63.244.28;
 deny 64.227.115.78;
 deny 66.146.193.33;
 deny 66.220.242.222;
+deny 66.78.40.147;
+deny 66.78.40.160;
 deny 67.219.109.141;
 deny 71.19.144.106;
 deny 72.14.179.10;
