--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -131,6 +131,7 @@ set_real_ip_from 138.59.18.110;
 set_real_ip_from 139.99.8.57;
 set_real_ip_from 141.239.149.94;
 set_real_ip_from 141.98.11.62;
+set_real_ip_from 142.171.211.123;
 set_real_ip_from 142.44.234.69;
 set_real_ip_from 143.110.156.176;
 set_real_ip_from 144.172.118.4;
@@ -654,7 +655,6 @@ set_real_ip_from 194.164.122.21;
 set_real_ip_from 194.233.174.56;
 set_real_ip_from 194.26.192.64;
 set_real_ip_from 194.26.192.77;
-set_real_ip_from 194.26.196.71;
 set_real_ip_from 195.160.220.104;
 set_real_ip_from 195.176.3.19;
 set_real_ip_from 195.176.3.20;
@@ -945,6 +945,7 @@ set_real_ip_from 209.141.51.30;
 set_real_ip_from 209.141.55.26;
 set_real_ip_from 209.141.59.116;
 set_real_ip_from 209.141.62.71;
+set_real_ip_from 210.223.41.251;
 set_real_ip_from 212.21.66.6;
 set_real_ip_from 212.73.134.204;
 set_real_ip_from 212.95.50.77;
@@ -992,6 +993,7 @@ set_real_ip_from 23.154.177.8;
 set_real_ip_from 23.154.177.9;
 set_real_ip_from 23.155.24.6;
 set_real_ip_from 23.155.8.104;
+set_real_ip_from 23.21.56.126;
 set_real_ip_from 23.236.122.62;
 set_real_ip_from 23.94.133.162;
 set_real_ip_from 23.94.211.25;
@@ -1574,6 +1576,8 @@ set_real_ip_from 2a0e:d602:2:2a2::2;
 set_real_ip_from 2a0e:d602:2:55f::2;
 set_real_ip_from 2a0e:e701:1198::1;
 set_real_ip_from 2a0e:fa00:0:d0::1;
+set_real_ip_from 2a0f:85c1:356:197a::1;
+set_real_ip_from 2a0f:85c1:356:578f::1;
 set_real_ip_from 2a0f:93c1:26:1f2::9ce5;
 set_real_ip_from 2a0f:df00:0:255::194;
 set_real_ip_from 2a0f:df00:0:255::195;
@@ -1725,6 +1729,7 @@ set_real_ip_from 5.196.8.113;
 set_real_ip_from 5.196.95.34;
 set_real_ip_from 5.255.100.126;
 set_real_ip_from 5.255.100.219;
+set_real_ip_from 5.255.100.26;
 set_real_ip_from 5.255.101.10;
 set_real_ip_from 5.255.103.190;
 set_real_ip_from 5.255.103.235;
@@ -1749,7 +1754,6 @@ set_real_ip_from 5.255.99.124;
 set_real_ip_from 5.255.99.147;
 set_real_ip_from 5.255.99.5;
 set_real_ip_from 5.2.67.226;
-set_real_ip_from 52.70.80.254;
 set_real_ip_from 5.2.79.190;
 set_real_ip_from 5.34.182.203;
 set_real_ip_from 5.42.66.6;
@@ -1773,6 +1777,8 @@ set_real_ip_from 62.63.244.28;
 set_real_ip_from 64.227.115.78;
 set_real_ip_from 66.146.193.33;
 set_real_ip_from 66.220.242.222;
+set_real_ip_from 66.78.40.147;
+set_real_ip_from 66.78.40.160;
 set_real_ip_from 67.219.109.141;
 set_real_ip_from 71.19.144.106;
 set_real_ip_from 72.14.179.10;
