--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -116,7 +116,6 @@ allow 109.70.100.68;
 allow 109.70.100.69;
 allow 109.70.100.70;
 allow 109.70.100.71;
-allow 118.163.74.160;
 allow 121.78.28.175;
 allow 123.253.35.32;
 allow 125.212.241.131;
@@ -128,6 +127,7 @@ allow 134.122.66.38;
 allow 135.125.205.25;
 allow 136.244.111.163;
 allow 138.59.18.110;
+allow 139.99.172.11;
 allow 139.99.8.57;
 allow 141.239.149.94;
 allow 141.98.11.62;
@@ -218,6 +218,7 @@ allow 178.218.144.64;
 allow 178.218.144.96;
 allow 178.218.144.99;
 allow 178.236.247.122;
+allow 178.30.184.108;
 allow 179.43.128.16;
 allow 179.43.159.194;
 allow 179.43.159.195;
@@ -808,7 +809,6 @@ allow 2001:67c:89c:702:1ce:1ce:babe:9;
 allow 2001:780:107:b::85;
 allow 2001:910:1400:107::2;
 allow 2001:9b1:c300:3044::610;
-allow 2001:b030:2422::7234;
 allow 2001:bc8:1600:472a::1;
 allow 2001:bc8:700:9212::1;
 allow 2001:bf0:666::666;
@@ -993,13 +993,13 @@ allow 23.154.177.8;
 allow 23.154.177.9;
 allow 23.155.24.6;
 allow 23.155.8.104;
-allow 23.21.56.126;
 allow 23.236.122.62;
 allow 23.94.133.162;
 allow 23.94.211.25;
 allow 2400:8901::f03c:93ff:fe68:23b3;
 allow 2401:c080:2000:111f:5400:4ff:fea3:9c02;
 allow 2402:1f00:8000:239::;
+allow 2402:1f00:8100:400::9;
 allow 2.57.122.179;
 allow 2.57.122.215;
 allow 2.57.122.246;
@@ -1011,9 +1011,9 @@ allow 2.58.56.90;
 allow 2.58.95.31;
 allow 2.58.95.35;
 allow 2.58.95.38;
-allow 2600:3c00:e000:4ee::1;
+allow 2600:3c00:e000:4ee::2;
 allow 2600:3c00::f03c:91ff:fe96:1cd9;
-allow 2600:3c03:e000:fa::3;
+allow 2600:3c03:e000:fa::1;
 allow 2600:3c03::f03c:91ff:fe24:47be;
 allow 2600:3c03::f03c:94ff:fed1:8c69;
 allow 2602:2e5::104;
@@ -1702,7 +1702,6 @@ allow 45.95.169.230;
 allow 45.95.202.48;
 allow 46.165.243.36;
 allow 46.182.21.248;
-allow 46.195.87.16;
 allow 46.226.164.14;
 allow 46.232.251.191;
 allow 46.234.47.105;
@@ -1756,6 +1755,7 @@ allow 5.255.99.5;
 allow 5.2.67.226;
 allow 5.2.79.190;
 allow 5.34.182.203;
+allow 54.210.194.109;
 allow 5.42.66.6;
 allow 5.42.80.232;
 allow 5.42.80.233;
