--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -116,6 +116,7 @@ allow 109.70.100.68;
 allow 109.70.100.69;
 allow 109.70.100.70;
 allow 109.70.100.71;
+allow 118.163.74.160;
 allow 121.78.28.175;
 allow 123.253.35.32;
 allow 125.212.241.131;
@@ -151,8 +152,8 @@ allow 149.56.44.47;
 allow 151.80.148.159;
 allow 152.89.233.169;
 allow 154.16.116.61;
-allow 156.146.63.172;
 allow 160.119.249.240;
+allow 161.35.129.51;
 allow 162.247.72.192;
 allow 162.247.72.199;
 allow 162.247.74.200;
@@ -557,7 +558,6 @@ allow 190.120.229.98;
 allow 190.211.254.97;
 allow 191.252.220.31;
 allow 191.96.165.34;
-allow 192.210.255.181;
 allow 192.42.116.14;
 allow 192.42.116.15;
 allow 192.42.116.17;
@@ -669,6 +669,7 @@ allow 198.251.84.237;
 allow 198.251.88.18;
 allow 198.251.89.96;
 allow 198.46.166.157;
+allow 198.46.215.32;
 allow 198.50.128.237;
 allow 198.58.107.53;
 allow 198.96.155.3;
@@ -809,6 +810,7 @@ allow 2001:67c:89c:702:1ce:1ce:babe:9;
 allow 2001:780:107:b::85;
 allow 2001:910:1400:107::2;
 allow 2001:9b1:c300:3044::610;
+allow 2001:b030:2422::7234;
 allow 2001:bc8:1600:472a::1;
 allow 2001:bc8:700:9212::1;
 allow 2001:bf0:666::666;
@@ -992,7 +994,6 @@ allow 23.154.177.7;
 allow 23.154.177.8;
 allow 23.154.177.9;
 allow 23.155.24.6;
-allow 23.155.8.104;
 allow 23.236.122.62;
 allow 23.94.133.162;
 allow 23.94.211.25;
@@ -1016,7 +1017,6 @@ allow 2600:3c00::f03c:91ff:fe96:1cd9;
 allow 2600:3c03:e000:fa::1;
 allow 2600:3c03::f03c:91ff:fe24:47be;
 allow 2600:3c03::f03c:94ff:fed1:8c69;
-allow 2602:2e5::104;
 allow 2602:2e6:0:6::;
 allow 2602:fc24:12:759::1;
 allow 2602:fc24:12:77c0::1;
@@ -1755,7 +1755,7 @@ allow 5.255.99.5;
 allow 5.2.67.226;
 allow 5.2.79.190;
 allow 5.34.182.203;
-allow 54.210.194.109;
+allow 54.152.62.66;
 allow 5.42.66.6;
 allow 5.42.80.232;
 allow 5.42.80.233;
