--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -153,7 +153,6 @@ set_real_ip_from 151.80.148.159;
 set_real_ip_from 152.89.233.169;
 set_real_ip_from 154.16.116.61;
 set_real_ip_from 160.119.249.240;
-set_real_ip_from 161.35.129.51;
 set_real_ip_from 162.247.72.192;
 set_real_ip_from 162.247.72.199;
 set_real_ip_from 162.247.74.200;
@@ -669,7 +668,6 @@ set_real_ip_from 198.251.84.237;
 set_real_ip_from 198.251.88.18;
 set_real_ip_from 198.251.89.96;
 set_real_ip_from 198.46.166.157;
-set_real_ip_from 198.46.215.32;
 set_real_ip_from 198.50.128.237;
 set_real_ip_from 198.58.107.53;
 set_real_ip_from 198.96.155.3;
@@ -994,6 +992,7 @@ set_real_ip_from 23.154.177.7;
 set_real_ip_from 23.154.177.8;
 set_real_ip_from 23.154.177.9;
 set_real_ip_from 23.155.24.6;
+set_real_ip_from 23.155.8.104;
 set_real_ip_from 23.236.122.62;
 set_real_ip_from 23.94.133.162;
 set_real_ip_from 23.94.211.25;
@@ -1017,6 +1016,7 @@ set_real_ip_from 2600:3c00::f03c:91ff:fe96:1cd9;
 set_real_ip_from 2600:3c03:e000:fa::1;
 set_real_ip_from 2600:3c03::f03c:91ff:fe24:47be;
 set_real_ip_from 2600:3c03::f03c:94ff:fed1:8c69;
+set_real_ip_from 2602:2e5::104;
 set_real_ip_from 2602:2e6:0:6::;
 set_real_ip_from 2602:fc24:12:759::1;
 set_real_ip_from 2602:fc24:12:77c0::1;
@@ -1755,7 +1755,7 @@ set_real_ip_from 5.255.99.5;
 set_real_ip_from 5.2.67.226;
 set_real_ip_from 5.2.79.190;
 set_real_ip_from 5.34.182.203;
-set_real_ip_from 54.152.62.66;
+set_real_ip_from 54.145.32.63;
 set_real_ip_from 5.42.66.6;
 set_real_ip_from 5.42.80.232;
 set_real_ip_from 5.42.80.233;
@@ -1799,7 +1799,6 @@ set_real_ip_from 77.48.28.204;
 set_real_ip_from 77.48.28.236;
 set_real_ip_from 77.48.28.237;
 set_real_ip_from 77.48.28.239;
-set_real_ip_from 77.81.247.72;
 set_real_ip_from 77.91.85.147;
 set_real_ip_from 77.91.86.95;
 set_real_ip_from 77.91.87.79;
@@ -1857,6 +1856,7 @@ set_real_ip_from 89.185.85.140;
 set_real_ip_from 89.187.143.31;
 set_real_ip_from 89.234.157.254;
 set_real_ip_from 89.236.112.100;
+set_real_ip_from 89.36.231.240;
 set_real_ip_from 89.58.18.210;
 set_real_ip_from 89.58.26.216;
 set_real_ip_from 89.58.41.156;
@@ -1922,5 +1922,6 @@ set_real_ip_from 95.143.193.125;
 set_real_ip_from 95.164.4.104;
 set_real_ip_from 95.164.46.204;
 set_real_ip_from 95.168.173.143;
+set_real_ip_from 95.211.210.103;
 set_real_ip_from 95.211.244.28;
 set_real_ip_from 98.128.173.33;
